Fixes alignment in details

--- a/static/css/compsoc.css
+++ b/static/css/compsoc.css
@@ -546,3 +546,7 @@ textarea {
 .offline {
     color:red;
 }
+
+dl.details p {
+    margin: 0px 0px 10px;
+}
